--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -21,15 +21,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pathlib import Path\n",
+    "\n",
     "# parameters and URLs\n",
     "path = str(Path(os.path.abspath(os.getcwd())).parent.absolute())\n",
     "stats1920Url = path + '/inDepthSoccerStats/2019-2020.csv'\n",
@@ -53,73 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 2661 entries, Jamie Vardy to Jean Onana\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   Unnamed: 0        2661 non-null   int64  \n",
-      " 1   teams_played_for  2661 non-null   object \n",
-      " 2   league            2661 non-null   object \n",
-      " 3   games             2661 non-null   int64  \n",
-      " 4   minutes_played    2661 non-null   int64  \n",
-      " 5   goals             2661 non-null   int64  \n",
-      " 6   npg               2661 non-null   int64  \n",
-      " 7   assists           2661 non-null   int64  \n",
-      " 8   xG                2661 non-null   float64\n",
-      " 9   xA                2661 non-null   float64\n",
-      " 10  npxG              2661 non-null   float64\n",
-      " 11  xG90              2661 non-null   float64\n",
-      " 12  xA90              2661 non-null   float64\n",
-      " 13  npxG90            2661 non-null   float64\n",
-      " 14  position          2661 non-null   object \n",
-      " 15  shots             2661 non-null   int64  \n",
-      " 16  key_passes        2661 non-null   int64  \n",
-      " 17  yellow_cards      2661 non-null   int64  \n",
-      " 18  red_cards         2661 non-null   int64  \n",
-      " 19  xGBuildup         2661 non-null   float64\n",
-      " 20  xGChain           2661 non-null   float64\n",
-      "dtypes: float64(8), int64(10), object(3)\n",
-      "memory usage: 457.4+ KB\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 30302 entries, 598 to 925584\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                                Non-Null Count  Dtype  \n",
-      "---  ------                                --------------  -----  \n",
-      " 0   first_name                            28337 non-null  object \n",
-      " 1   last_name                             30302 non-null  object \n",
-      " 2   name                                  30302 non-null  object \n",
-      " 3   last_season                           30302 non-null  int64  \n",
-      " 4   current_club_id                       30302 non-null  int64  \n",
-      " 5   player_code                           30302 non-null  object \n",
-      " 6   country_of_birth                      27613 non-null  object \n",
-      " 7   city_of_birth                         28099 non-null  object \n",
-      " 8   country_of_citizenship                29759 non-null  object \n",
-      " 9   date_of_birth                         30255 non-null  object \n",
-      " 10  sub_position                          30130 non-null  object \n",
-      " 11  position                              30302 non-null  object \n",
-      " 12  foot                                  27913 non-null  object \n",
-      " 13  height_in_cm                          28204 non-null  float64\n",
-      " 14  market_value_in_eur                   19383 non-null  float64\n",
-      " 15  highest_market_value_in_eur           28981 non-null  float64\n",
-      " 16  contract_expiration_date              18835 non-null  object \n",
-      " 17  agent_name                            14941 non-null  object \n",
-      " 18  image_url                             30302 non-null  object \n",
-      " 19  url                                   30302 non-null  object \n",
-      " 20  current_club_domestic_competition_id  30302 non-null  object \n",
-      " 21  current_club_name                     30302 non-null  object \n",
-      "dtypes: float64(3), int64(2), object(17)\n",
-      "memory usage: 5.3+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
     "stats1920 = pd.read_csv(stats1920Url, sep=',', index_col='player_name')\n",
@@ -132,8 +61,8 @@
     "# we need to convert NaN values to something else otherwise NA strings are converted to NaN -> problem with Namibia\n",
     "#countries = pd.read_csv(countriesURL, sep=',', index_col='Name', keep_default_na=False, na_values=['_'])\n",
     "\n",
-    "stats1920.info()\n",
-    "players.info()"
+    "#stats1920.info()\n",
+    "#players.info()"
    ]
   },
   {
@@ -147,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +228,7 @@
       "NONE: bruno, matches: 2\n",
       "NONE: franck-zambo, matches: 0\n",
       "NONE: roger, matches: 3\n",
-      "NONE: morales, matches: 0\n",
+      "GOOGLE: morales --> lucas-morales\n",
       "NONE: ezequiel-avila, matches: 0\n",
       "GOOGLE: daniel-parejo --> dani-parejo\n",
       "NONE: angel, matches: 0\n",
@@ -369,7 +298,7 @@
       "PERM1: lee-kang-in --> kang-in-lee\n",
       "NONE: cristo-gonzalez, matches: 0\n",
       "GOOGLE: xavier-quintilla --> xavi-quintilla\n",
-      "GOOGLE: javier-diaz --> javi-diaz\n",
+      "NONE: javier-diaz, matches: 0\n",
       "PERM1: gian-luca-waldschmidt --> luca-waldschmidt\n",
       "PERM2: john-brooks --> john-anthony-brooks\n",
       "NONE: felipe, matches: 2\n",
@@ -450,18 +379,8 @@
       "PERM1: albert-nicolas-lottin --> albert-lottin\n",
       "MAXSIM: yassin-benrahou --> yassine-benrahou\n",
       "PERM1: nathan-ngoumou-minpol --> nathan-ngoumou\n",
-      "--- STATISTICS ---\n",
-      "Total matches: 2515 -- percentage: 96.92%\n",
-      "---  details:  ---\n",
-      "Exact matches: 2432 -- percentage: 93.72%\n",
-      "No matches: 80 -- percentage: 3.08%\n",
-      "  ---> unable to solve: 14 -- percentage: 0.54%\n",
-      "Resolved permutating statsName: 31 -- percentage: 1.19%\n",
-      "Resolved permutating player code: 12 -- percentage: 0.46%\n",
-      "Resolved with google: 28 -- percentage: 1.08%\n",
-      "Resolved with max sim.: 12 -- percentage: 0.46%\n",
-      "CPU times: total: 1min 43s\n",
-      "Wall time: 7min 12s\n"
+      "CPU times: total: 3min 11s\n",
+      "Wall time: 9min 9s\n"
      ]
     }
    ],
@@ -561,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -569,14 +488,15 @@
      "output_type": "stream",
      "text": [
       "   --- STATISTICS ---\n",
-      "Total matches:                            2515 -- percentage: 96.92%\n",
-      "  ---> exact matches:                     2432 -- percentage: 93.72%\n",
-      "  ---> resolved permutating statsName:      31 -- percentage: 1.19%\n",
-      "  ---> resolved permutating player code:    12 -- percentage: 0.46%\n",
-      "  ---> resolved with google:                28 -- percentage: 1.08%\n",
-      "  ---> resolved with max sim.:              12 -- percentage: 0.46%\n",
-      "No matches:                                 80 -- percentage: 3.08%\n",
-      "  ---> unable to find unique match:         14 -- percentage: 0.54%\n"
+      "Total matches:                             2515 -- percentage: 96.92%\n",
+      "  ---> exact matches:                      2432 -- percentage: 93.72%\n",
+      "  ---> resolved permutating statsName:       31 -- percentage: 1.19%\n",
+      "  ---> resolved permutating player code:     12 -- percentage: 0.46%\n",
+      "  ---> resolved with google:                 28 -- percentage: 1.08%\n",
+      "  ---> resolved with max sim.:               12 -- percentage: 0.46%\n",
+      "No matches:                                  80 -- percentage: 3.08%\n",
+      "  ---> unable to resolve between matches:    14 -- percentage: 0.54%\n",
+      "  ---> zero matches found:                   66 -- percentage: 2.54%\n"
      ]
     }
    ],
@@ -585,14 +505,15 @@
     "statsRows = np.size(stats1819, 0);\n",
     "print(\"   --- STATISTICS ---\")\n",
     "tot_matches = exact_matches + + resolved_google + resolved_permS + resolved_permP + resolved_max_sim\n",
-    "print(\"Total matches:                           \"+\"{:5d}\".format(tot_matches)+\" -- percentage: \" + \"{:.2f}%\".format(tot_matches*100/statsRows))\n",
-    "print(\"  ---> exact matches:                    \"+\"{:5d}\".format(exact_matches)+\" -- percentage: \" + \"{:.2f}%\".format(exact_matches*100/statsRows)) \n",
-    "print(\"  ---> resolved permutating statsName:   \"+\"{:5d}\".format(resolved_permS)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_permS*100/statsRows))\n",
-    "print(\"  ---> resolved permutating player code: \"+\"{:5d}\".format(resolved_permP)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_permP*100/statsRows))\n",
-    "print(\"  ---> resolved with google:             \"+\"{:5d}\".format(resolved_google)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_google*100/statsRows))\n",
-    "print(\"  ---> resolved with max sim.:           \"+\"{:5d}\".format(resolved_max_sim)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_max_sim*100/statsRows))\n",
-    "print(\"No matches:                              \"+\"{:5d}\".format(no_matches)+\" -- percentage: \" + \"{:.2f}%\".format(no_matches*100/statsRows))\n",
-    "print(\"  ---> unable to find unique match:      \"+\"{:5d}\".format(unable_to_solve)+\" -- percentage: \" + \"{:.2f}%\".format(unable_to_solve*100/statsRows))"
+    "print(\"Total matches:                            \"+\"{:5d}\".format(tot_matches)+\" -- percentage: \" + \"{:.2f}%\".format(tot_matches*100/statsRows))\n",
+    "print(\"  ---> exact matches:                     \"+\"{:5d}\".format(exact_matches)+\" -- percentage: \" + \"{:.2f}%\".format(exact_matches*100/statsRows)) \n",
+    "print(\"  ---> resolved permutating statsName:    \"+\"{:5d}\".format(resolved_permS)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_permS*100/statsRows))\n",
+    "print(\"  ---> resolved permutating player code:  \"+\"{:5d}\".format(resolved_permP)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_permP*100/statsRows))\n",
+    "print(\"  ---> resolved with google:              \"+\"{:5d}\".format(resolved_google)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_google*100/statsRows))\n",
+    "print(\"  ---> resolved with max sim.:            \"+\"{:5d}\".format(resolved_max_sim)+\" -- percentage: \" + \"{:.2f}%\".format(resolved_max_sim*100/statsRows))\n",
+    "print(\"No matches:                               \"+\"{:5d}\".format(no_matches)+\" -- percentage: \" + \"{:.2f}%\".format(no_matches*100/statsRows))\n",
+    "print(\"  ---> unable to resolve between matches: \"+\"{:5d}\".format(unable_to_solve)+\" -- percentage: \" + \"{:.2f}%\".format(unable_to_solve*100/statsRows))\n",
+    "print(\"  ---> zero matches found:                \"+\"{:5d}\".format(no_matches - unable_to_solve)+\" -- percentage: \" + \"{:.2f}%\".format((no_matches - unable_to_solve)*100/statsRows))"
    ]
   },
   {
