MG notebook and rdf output

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,15 +875,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 62.5 ms\n",
-      "Wall time: 74.6 ms\n"
+      "CPU times: total: 78.1 ms\n",
+      "Wall time: 93.9 ms\n"
      ]
     }
    ],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -914,16 +914,16 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 8.11 ms\n"
+      "Wall time: 7.8 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=Naa1a8b3d701247fb9d235946bc739c3d (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N61b6db8a2fe442e29df2811ffbade5db (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,15 +966,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 781 ms\n",
-      "Wall time: 966 ms\n"
+      "CPU times: total: 609 ms\n",
+      "Wall time: 922 ms\n"
      ]
     }
    ],
@@ -1005,11 +1005,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1.8 s\n",
+      "Wall time: 4.78 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
+    "\n",
+    "y = 2018\n",
     "\n",
     "players['first_name'] = players['first_name'].fillna(\"\")\n",
     "players['last_name'] = players['last_name'].fillna(\"\")\n",
@@ -1027,37 +1038,33 @@
     "    if(player['last_name'] != \"\"):\n",
     "        g.add((Footballer, FOAF['familyName'], Literal(cleanString(player['last_name']), datatype=XSD.string)))\n",
     "\n",
-    "    if(len(row['fbref_indexes']) == 2):\n",
-    "        for tid in row['teamIDs']:\n",
-    "            teamId = \"team\"+str(tid)\n",
+    "    Memb = URIRef(DCSSO[\"memb\"+tmId+\"s\"+str(y)+\"t\"+'_'.join([str(tid) for tid in row['teamIDs']])])\n",
+    "    g.add((Memb, RDF.type, DCSSO.SeasonalMembership))\n",
+    "    g.add((Footballer, DCSSO['hasMembership'], Memb))\n",
+    "    g.add((Memb, DCSSO['season'], Literal(\"2018\", datatype=XSD.int)))\n",
+    "    for tid in row['teamIDs']:\n",
+    "        teamId = \"team\"+str(tid)\n",
+    "        g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[teamId])))\n",
     "\n",
-    "            Memb = URIRef(DCSSO[\"memb\"+tmId+\"s\"+str(y)+teamId])\n",
-    "            g.add((Memb, RDF.type, DCSSO.SeasonalMembership))\n",
-    "            g.add((Footballer, DCSSO['hasMembership'], Memb))\n",
-    "            g.add((Memb, DCSSO['season'], Literal(\"2018\", datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[teamId])))\n",
-    "\n",
-    "            #statistics\n",
-    "            g.add((Memb, DCSSO['games'], Literal(row['games'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['minutes'], Literal(row['minutes_played'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['goals'], Literal(row['goals'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['npg'], Literal(row['npg'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['assists'], Literal(row['assists'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['keyPasses'], Literal(row['key_passes'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['shots'], Literal(row['shots'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['yellowCards'], Literal(row['yellow_cards'], datatype=XSD.int)))\n",
-    "            g.add((Memb, DCSSO['redCards'], Literal(row['red_cards'], datatype=XSD.int)))\n",
+    "    #statistics\n",
+    "    g.add((Memb, DCSSO['games'], Literal(row['games'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['minutes'], Literal(row['minutes_played'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['goals'], Literal(row['goals'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['npg'], Literal(row['npg'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['assists'], Literal(row['assists'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['keyPasses'], Literal(row['key_passes'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['shots'], Literal(row['shots'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['yellowCards'], Literal(row['yellow_cards'], datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['redCards'], Literal(row['red_cards'], datatype=XSD.int)))\n",
     "    \n",
-    "            g.add((Memb, DCSSO['xG'], Literal(row['xG'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['xA'], Literal(row['xA'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['npxG'], Literal(row['npxG'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['xG90'], Literal(row['xG90'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['xA90'], Literal(row['xA90'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['npxG90'], Literal(row['npxG90'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['xGBuildup'], Literal(row['xGBuildup'], datatype=XSD.double)))\n",
-    "            g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))\n",
-    "    \n",
-    "    \n",
+    "    g.add((Memb, DCSSO['xG'], Literal(row['xG'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['xA'], Literal(row['xA'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['npxG'], Literal(row['npxG'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['xG90'], Literal(row['xG90'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['xA90'], Literal(row['xA90'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['npxG90'], Literal(row['npxG90'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['xGBuildup'], Literal(row['xGBuildup'], datatype=XSD.double)))\n",
+    "    g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))\n",
     "    \n",
     "    if(player['position'] != \"Missing\"):\n",
     "        subPosition = player['sub_position'].replace(\" \", \"\").replace(\"-\", \"\")\n",
@@ -1074,15 +1081,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- saving serialization ---\n",
+      "CPU times: total: 2.44 s\n",
+      "Wall time: 4.19 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# print all the data in the Turtle format\n",
     "print(\"--- saving serialization ---\")\n",
-    "with open(savePath + 'stats1819.rdf', 'w') as file:\n",
-    "    file.write(g.serialize(format='xml'))\n",
+    "with open(savePath + 'stats1819.ttl', 'w') as file:\n",
+    "    file.write(g.serialize(format='turtle'))\n",
     "    #.decode(\"utf-8\")\n"
    ]
   },
