Mg updated notebook

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -752,9 +752,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Munir\n",
+      "Raúl García\n",
+      "Nicolai Müller\n",
+      "Gregor Kobel\n",
+      "Krzysztof Piatek\n",
+      "Marko Pajac\n",
+      "Emil Hallfredsson\n",
+      "Ivan Radovanovic\n",
+      "Bartlomiej Dragowski\n",
+      "Could match: 52 could not: 9\n"
+     ]
+    }
+   ],
    "source": [
     "#we will use copies of row of the df, so we silence the warnings that would arise\n",
     "pd.options.mode.chained_assignment = None\n",
@@ -766,6 +783,7 @@
     "\n",
     "stats1819['teamIDs'] = [list()] * len(stats1819)\n",
     "\n",
+    "m = nm = 0\n",
     "newRows = []\n",
     "for ind, row in stats1819.iterrows():\n",
     "    teamIDs = list()\n",
@@ -777,6 +795,7 @@
     "        player = players.loc[row['trID']]\n",
     "        fbmatch = stats1819FBref[stats1819FBref['player'] == player['name']]\n",
     "        if(len(fbmatch) == 2):\n",
+    "            m += 1\n",
     "            team0ID, team1ID = teamIDs\n",
     "            team0 = teams.loc[team0ID]['name']\n",
     "\n",
@@ -826,8 +845,12 @@
     "            \n",
     "            newRows.append(corrRow.values)\n",
     "            newRows.append(wrongRow.values)\n",
-    "            \n",
     "\n",
+    "        else:\n",
+    "            nm += 1\n",
+    "            print(row['player_name'])\n",
+    "            \n",
+    "print(\"Could match: \"+str(m)+\" could not: \"+str(nm))\n",
     "stats1819 = pd.concat([stats1819, pd.DataFrame(newRows, columns=stats1819.columns, index=range(len(stats1819),len(stats1819)+len(newRows)))])"
    ]
   },
