MG various updates Now there is a SeasonalAggrMembership class to store data about a player in two teams in the same season

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,8 @@
     "stats1819Url = path + '/stats1819_IDs.csv'\n",
     "stats1819 = pd.read_csv(stats1819Url, sep=',', index_col='indCol')\n",
     "\n",
-    "stats1819['teamIDs'] = [list()] * len(stats1819)\n",
+    "stats1819['team0ID'] = [0] * len(stats1819)\n",
+    "stats1819['team1ID'] = [0] * len(stats1819)\n",
     "\n",
     "m = nm = 0\n",
     "newRows = []\n",
@@ -789,8 +790,9 @@
     "    teamIDs = list()\n",
     "    for team in row['teams_played_for'].split(\",\"):\n",
     "        teamIDs.append(int(teamIDDict[team]))\n",
-    "    stats1819.at[ind, 'teamIDs'] = teamIDs\n",
-    "    stats1819.at[ind, 'teams_played_for'] = row['teams_played_for'].split(\",\")\n",
+    "    stats1819.at[ind, 'team0ID'] = teamIDs[0]\n",
+    "    if(len(teamIDs) == 2):\n",
+    "        stats1819.at[ind, 'team1ID'] = teamIDs[1]\n",
     "    if(len(teamIDs) == 2):\n",
     "        player = players.loc[row['trID']]\n",
     "        fbmatch = stats1819FBref[stats1819FBref['player'] == player['name']]\n",
@@ -815,29 +817,46 @@
     "            corrRow = stats1819.loc[ind]\n",
     "            wrongRow = stats1819.loc[ind]\n",
     "            \n",
-    "            #we do not modify team name: we will only use transfermarkt team ID later\n",
-    "            corrRow.at['teams_played_for'] = [teams.loc[team0ID]['name']]\n",
-    "            corrRow.at['teamIDs'] = [team0ID]\n",
+    "            corrRow.at['teams_played_for'] = teams.loc[team0ID]['name']\n",
+    "            corrRow.at['team0ID'] = team0ID\n",
+    "            corrRow.at['team1ID'] = 0\n",
     "            corrRow.at['games'] = stats1819FBref.at[corrInd, 'games']\n",
     "            corrRow.at['goals'] = stats1819FBref.at[corrInd, 'goals']\n",
     "            corrRow.at['minutes_played'] = stats1819FBref.at[corrInd, 'minutes']\n",
     "            corrRow.at['npg'] = stats1819FBref.at[corrInd, 'goals'] - stats1819FBref.at[corrInd, 'pens_made']\n",
     "            corrRow.at['assists'] = stats1819FBref.at[corrInd, 'assists']\n",
     "            corrRow.at['xG'] = stats1819FBref.at[corrInd, 'xg']\n",
+    "            corrRow.at['xG90'] = corrRow['xG'] / corrRow['minutes_played'] * 90\n",
+    "            corrRow.at['npxG'] = stats1819FBref.at[corrInd, 'npxg']\n",
+    "            corrRow.at['npxG90'] = corrRow['npxG'] / corrRow['minutes_played'] * 90\n",
+    "            corrRow.at['xA'] = stats1819FBref.at[corrInd, 'xa']\n",
+    "            corrRow.at['xA90'] = corrRow['xA'] / corrRow['minutes_played'] * 90\n",
     "            corrRow.at['yellow_cards'] = stats1819FBref.at[corrInd, 'cards_yellow']\n",
     "            corrRow.at['red_cards'] = stats1819FBref.at[corrInd, 'cards_red']\n",
     "            corrRow.at['shots'] = stats1819FBref.at[corrInd, 'shots_total']\n",
     "\n",
-    "            wrongRow.at['teams_played_for'] = [teams.loc[team1ID]['name']]\n",
-    "            wrongRow.at['teamIDs'] = [team1ID]\n",
+    "            wrongRow.at['teams_played_for'] = teams.loc[team1ID]['name']\n",
+    "            wrongRow.at['team0ID'] = team1ID\n",
+    "            wrongRow.at['team1ID'] = 0\n",
     "            wrongRow.at['games'] = row['games'] - corrRow['games']\n",
     "            wrongRow.at['goals'] = row['goals'] - corrRow['goals']\n",
     "            wrongRow.at['minutes_played'] = row['minutes_played'] - corrRow['minutes_played']\n",
     "            wrongRow.at['npg'] = row['npg'] - corrRow['npg']\n",
     "            wrongRow.at['assists'] = row['assists'] - corrRow['assists']\n",
-    "            wrongRow.at['xG'] = row['xG'] - corrRow['xG']\n",
+    "            #xG could result < 0 for different roundings or slightly different calculations\n",
+    "            #therefore, in such cases, setting it to 0 could be reasonable\n",
+    "            wrongRow.at['xG'] = max(row['xG'] - corrRow['xG'], 0)\n",
+    "            wrongRow.at['xG90'] = wrongRow['xG'] / wrongRow['minutes_played'] * 90\n",
+    "            wrongRow.at['npxG'] = max(row['npxG'] - corrRow['npxG'], 0)\n",
+    "            wrongRow.at['npxG90'] = wrongRow['npxG'] / wrongRow['minutes_played'] * 90\n",
+    "            wrongRow.at['xA'] = max(row['xA'] - corrRow['xA'], 0)\n",
+    "            wrongRow.at['xA90'] = wrongRow['xA'] / wrongRow['minutes_played'] * 90\n",
     "            wrongRow.at['yellow_cards'] = row['yellow_cards'] - corrRow['yellow_cards']\n",
     "            wrongRow.at['shots'] = row['shots'] - corrRow['shots']\n",
+    "\n",
+    "            #we lack of data for these columns, so we mark this lack for later\n",
+    "            corrRow.at['xGBuildup'] = corrRow['xGChain'] = wrongRow.at['xGBuildup'] = wrongRow['xGChain'] = -1\n",
+    "            corrRow.at['key_passes'] = wrongRow.at['key_passes'] = -1\n",
     "            \n",
     "            if(wrongRow.at['shots'] < 0):\n",
     "                print(corrRow)\n",
@@ -851,12 +870,15 @@
     "            print(row['player_name'])\n",
     "            \n",
     "print(\"Could match: \"+str(m)+\" could not: \"+str(nm))\n",
-    "stats1819 = pd.concat([stats1819, pd.DataFrame(newRows, columns=stats1819.columns, index=range(len(stats1819),len(stats1819)+len(newRows)))])"
+    "#create the new dataframe to be appended to the old one\n",
+    "startInd = stats1819.index[len(stats1819) - 1] + 1\n",
+    "newStats = pd.DataFrame(newRows, columns=stats1819.columns, index=range(startInd,startInd+len(newRows)))\n",
+    "stats1819 = pd.concat([stats1819, newStats])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,13 +902,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = str(Path(os.path.abspath(os.getcwd())))\n",
     "stats1819Url = path + '/stats1819.csv'\n",
-    "stats1819 = pd.read_csv(stats1819Url, sep=',', index_col='indCol')"
+    "stats1819 = pd.read_csv(stats1819Url, sep=',') #, index_col='indCol'"
    ]
   },
   {
@@ -898,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +928,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 78.1 ms\n",
-      "Wall time: 93.9 ms\n"
+      "Wall time: 96 ms\n"
      ]
     }
    ],
@@ -929,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -937,16 +959,16 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 7.8 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N61b6db8a2fe442e29df2811ffbade5db (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N49ef57e1fa3a418da56b09ae674707fe (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +989,7 @@
     "LaLiga = URIRef(DCSSO[\"ES1\"])\n",
     "g.add((LaLiga, RDF.type, DCSSO.League))\n",
     "g.add((LaLiga, FOAF['name'], Literal(\"LaLiga\", datatype=XSD.string)))\n",
-    "g.add((SerieA, DCSSO['hasCountry'], URIRef(DCSSO[\"ES\"])))\n",
+    "g.add((LaLiga, DCSSO['hasCountry'], URIRef(DCSSO[\"ES\"])))\n",
     "\n",
     "Premier = URIRef(DCSSO[\"GB1\"])\n",
     "g.add((Premier, RDF.type, DCSSO.League))\n",
@@ -989,15 +1011,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 609 ms\n",
-      "Wall time: 922 ms\n"
+      "CPU times: total: 688 ms\n",
+      "Wall time: 1.07 s\n"
      ]
     }
    ],
@@ -1028,15 +1050,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1.8 s\n",
-      "Wall time: 4.78 s\n"
+      "CPU times: total: 2.22 s\n",
+      "Wall time: 3.94 s\n"
      ]
     }
    ],
@@ -1060,14 +1082,21 @@
     "        g.add((Footballer, FOAF['firstName'], Literal(cleanString(player['first_name']), datatype=XSD.string)))\n",
     "    if(player['last_name'] != \"\"):\n",
     "        g.add((Footballer, FOAF['familyName'], Literal(cleanString(player['last_name']), datatype=XSD.string)))\n",
+    "    g.add((Footballer, FOAF['name'], Literal(cleanString(player['name']), datatype=XSD.string)))\n",
     "\n",
-    "    Memb = URIRef(DCSSO[\"memb\"+tmId+\"s\"+str(y)+\"t\"+'_'.join([str(tid) for tid in row['teamIDs']])])\n",
-    "    g.add((Memb, RDF.type, DCSSO.SeasonalMembership))\n",
+    "    teamIDs = str(row['team0ID'])\n",
+    "    if(row['team1ID'] != 0):\n",
+    "        teamIDs += \"_\"+str(row['team1ID'])\n",
+    "        MembClassURI = DCSSO.SeasonalAggrMembership\n",
+    "    else:\n",
+    "        MembClassURI = DCSSO.SeasonalMembership\n",
+    "    Memb = URIRef(DCSSO[\"memb\"+tmId+\"s\"+str(y)+\"t\"+teamIDs])\n",
+    "    g.add((Memb, RDF.type, MembClassURI))\n",
     "    g.add((Footballer, DCSSO['hasMembership'], Memb))\n",
     "    g.add((Memb, DCSSO['season'], Literal(\"2018\", datatype=XSD.int)))\n",
-    "    for tid in row['teamIDs']:\n",
-    "        teamId = \"team\"+str(tid)\n",
-    "        g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[teamId])))\n",
+    "    g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[\"team\"+str(row['team0ID'])])))\n",
+    "    if(row['team1ID'] != 0):\n",
+    "        g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[\"team\"+str(row['team1ID'])])))\n",
     "\n",
     "    #statistics\n",
     "    g.add((Memb, DCSSO['games'], Literal(row['games'], datatype=XSD.int)))\n",
@@ -1075,7 +1104,6 @@
     "    g.add((Memb, DCSSO['goals'], Literal(row['goals'], datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['npg'], Literal(row['npg'], datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['assists'], Literal(row['assists'], datatype=XSD.int)))\n",
-    "    g.add((Memb, DCSSO['keyPasses'], Literal(row['key_passes'], datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['shots'], Literal(row['shots'], datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['yellowCards'], Literal(row['yellow_cards'], datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['redCards'], Literal(row['red_cards'], datatype=XSD.int)))\n",
@@ -1086,8 +1114,12 @@
     "    g.add((Memb, DCSSO['xG90'], Literal(row['xG90'], datatype=XSD.double)))\n",
     "    g.add((Memb, DCSSO['xA90'], Literal(row['xA90'], datatype=XSD.double)))\n",
     "    g.add((Memb, DCSSO['npxG90'], Literal(row['npxG90'], datatype=XSD.double)))\n",
-    "    g.add((Memb, DCSSO['xGBuildup'], Literal(row['xGBuildup'], datatype=XSD.double)))\n",
-    "    g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))\n",
+    "\n",
+    "    #key pass. set to -1 implies that we miss the following data\n",
+    "    if(row['key_passes'] != -1):\n",
+    "        g.add((Memb, DCSSO['keyPasses'], Literal(row['key_passes'], datatype=XSD.int)))\n",
+    "        g.add((Memb, DCSSO['xGBuildup'], Literal(row['xGBuildup'], datatype=XSD.double)))\n",
+    "        g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))\n",
     "    \n",
     "    if(player['position'] != \"Missing\"):\n",
     "        subPosition = player['sub_position'].replace(\" \", \"\").replace(\"-\", \"\")\n",
@@ -1104,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1112,8 +1144,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 2.44 s\n",
-      "Wall time: 4.19 s\n"
+      "CPU times: total: 2.27 s\n",
+      "Wall time: 4.24 s\n"
      ]
     }
    ],
