MG added tm values per season + minor fixes

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,9 +903,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% completed..\n",
+      "CPU times: total: 3.36 s\n",
+      "Wall time: 6.2 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -961,9 +971,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- saving serialization ---\n",
+      "CPU times: total: 1.64 s\n",
+      "Wall time: 2.6 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# print all the data in the Turtle format\n",
@@ -974,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,22 +1026,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jurado\n",
+      "Raúl García\n",
+      "Players with value: 2607 -- no value: 47\n",
+      "CPU times: total: 1.7 s\n",
+      "Wall time: 4.21 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
-    "y=2019\n",
-    "shortSeas = \"1920\"\n",
+    "y=2016\n",
+    "shortSeas = \"1617\"\n",
     "stats = pd.read_csv('stats'+str(shortSeas)+'_IDs.csv', sep=',')\n",
+    "val = pd.read_csv(path+\"/inDepthSoccerStats/player_valuations\"+shortSeas+\".csv\", sep=',', index_col='player_id')\n",
     "\n",
-    "c=0\n",
+    "yes = no = 0\n",
     "for index, row in stats.iterrows():\n",
-    "    c+=1\n",
-    "    if(int(100*(c-1)/len(stats)) < int(100*c/len(stats))):\n",
-    "        clear_output(wait=True)\n",
-    "        print(str(int(100*c/len(stats)))+\"% completed.\"+\".\"*(c%3))\n",
     "    tmId = str(row['trID'])\n",
     "    if(tmId == \"0\"):\n",
     "        continue\n",
@@ -1038,10 +1067,20 @@
     "    Memb = URIRef(DCSSO[\"memb\"+tmId+\"s\"+str(y)+\"t\"+teamIDs])\n",
     "    g.add((Memb, RDF.type, MembClassURI))\n",
     "    g.add((Footballer, DCSSO['hasMembership'], Memb))\n",
-    "    g.add((Memb, DCSSO['season'], Literal(str(y), datatype=XSD.int)))\n",
+    "    g.add((Memb, DCSSO['season'], Literal(y, datatype=XSD.int)))\n",
     "    g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[\"team\"+str(row['team0ID'])])))\n",
     "    if(row['team1ID'] != 0):\n",
     "        g.add((Memb, DCSSO['forTeam'], URIRef(DCSSO[\"team\"+str(row['team1ID'])])))\n",
+    "    if row['trID'] in val.index:\n",
+    "        val_eur = val.loc[row['trID']]['market_value_in_eur']\n",
+    "        g.add((Memb, DCSSO['tmValue'], Literal(val_eur, datatype=XSD.int)))\n",
+    "        yes += 1\n",
+    "    else:\n",
+    "        no += 1\n",
+    "        if(row['games'] >= 10):\n",
+    "            print(row['player_name'])\n",
+    "    #val_eur = val.loc[tmId]['market_value_in_eur']\n",
+    "    #g.add((Memb, DCSSO['tmValue'], Literal(str(val_eur), datatype=XSD.int)))\n",
     "\n",
     "    #statistics\n",
     "    g.add((Memb, DCSSO['games'], Literal(row['games'], datatype=XSD.int)))\n",
@@ -1064,14 +1103,26 @@
     "    if(row['key_passes'] != -1):\n",
     "        g.add((Memb, DCSSO['keyPasses'], Literal(row['key_passes'], datatype=XSD.int)))\n",
     "        g.add((Memb, DCSSO['xGBuildup'], Literal(row['xGBuildup'], datatype=XSD.double)))\n",
-    "        g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))"
+    "        g.add((Memb, DCSSO['xGChain'], Literal(row['xGChain'], datatype=XSD.double)))\n",
+    "\n",
+    "print(\"Players with value: \"+str(yes)+\" -- no value: \"+str(no))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- saving serialization ---\n",
+      "CPU times: total: 1.52 s\n",
+      "Wall time: 3.37 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# print all the data in the Turtle format\n",
@@ -1086,51 +1137,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install sparqlwrapper\n",
-    "# https://rdflib.github.io/sparqlwrapper/\n",
-    "\n",
-    "import sys\n",
-    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
-    "\n",
-    "endpoint_url = \"https://query.wikidata.org/sparql\"\n",
-    "\n",
-    "query = \"\"\"SELECT ?oLabel\n",
-    "WHERE\n",
-    "{\n",
-    "wd:Q192923 skos:altLabel ?o.\n",
-    "FILTER(isLiteral(?o))\n",
-    "SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],en\" }\n",
-    "}\"\"\"\n",
-    "\n",
-    "\n",
-    "def get_results(endpoint_url, query):\n",
-    "    user_agent = \"WDQS-example Python/%s.%s\" % (sys.version_info[0], sys.version_info[1])\n",
-    "    # TODO adjust user agent; see https://w.wiki/CX6\n",
-    "    sparql = SPARQLWrapper(endpoint_url, agent=user_agent)\n",
-    "    sparql.setQuery(query)\n",
-    "    sparql.setReturnFormat(JSON)\n",
-    "    return sparql.query().convert()\n",
-    "\n",
-    "\n",
-    "results = get_results(endpoint_url, query)\n",
-    "\n",
-    "for result in results[\"results\"][\"bindings\"]:\n",
-    "    print(result[\"oLabel\"][\"value\"])"
-   ]
   }
  ],
  "metadata": {
