MG fixed problem with negative statistics

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,15 +466,29 @@
     "#### Completing and correcting statistics in corner cases\n",
     "We need to manage the fact some rows contain total information about a player switching team in the same league during the season. <br>\n",
     "We can use information in the FBref files to complete our data; we have observed that, in this situation, it contains correct information only for the row of the two which has lower index: some statistics in the second row can be therefore corrected by subtracting the ones in the first row from the total ones. <br>\n",
+    "We also delete some inconsistencies arising because of different calculations or errors in the second dataset, by setting to 0 negative values.\n",
+    "Major statistics (e.g. goals) show very few such visible errors, and are corrected manually.\n",
     "\n",
     "Observe that we load stats to make this cell idempotent."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matheus Cunha goals\n",
+      "Matheus Cunha npg\n",
+      "Gianluca Caprari yc\n",
+      "Riccardo Saponara rc\n",
+      "Could match: 56 could not: 15\n"
+     ]
+    }
+   ],
    "source": [
     "#we will use copies of row of the df, so we silence the warnings that would arise\n",
     "pd.options.mode.chained_assignment = None\n",
@@ -482,9 +496,7 @@
     "statsFBref = pd.read_csv(statsFBrefUrl, sep=';', index_col='Column1', dtype={\"Attendance\": \"string\"})\n",
     "statsFBref['player'] = [unidecode(name) for name in statsFBref['player']]\n",
     "\n",
-    "path = str(Path(os.path.abspath(os.getcwd())))\n",
-    "statsUrl = path + '/stats'+shortSeas+'_IDs.csv'\n",
-    "stats = pd.read_csv(statsUrl, sep=',', index_col='indCol')\n",
+    "stats = pd.read_csv('stats'+shortSeas+'_IDs.csv', sep=',', index_col='indCol')\n",
     "\n",
     "m = nm = 0\n",
     "newRows = []\n",
@@ -535,20 +547,24 @@
     "            wrongRow.at['team0ID'] = team1ID\n",
     "            wrongRow.at['team1ID'] = 0\n",
     "            wrongRow.at['games'] = row['games'] - corrRow['games']\n",
+    "            if(wrongRow['games'] < 0):\n",
+    "                print(wrongRow['player_name']+\" games\")\n",
     "            wrongRow.at['goals'] = row['goals'] - corrRow['goals']\n",
-    "            wrongRow.at['minutes_played'] = row['minutes_played'] - corrRow['minutes_played']\n",
+    "            if(wrongRow['goals'] < 0):\n",
+    "                print(wrongRow['player_name']+\" goals\")\n",
+    "            wrongRow.at['minutes_played'] = max(row['minutes_played'] - corrRow['minutes_played'], 1)\n",
     "            wrongRow.at['npg'] = row['npg'] - corrRow['npg']\n",
-    "            wrongRow.at['assists'] = row['assists'] - corrRow['assists']\n",
-    "            #xG could result < 0 for different roundings or slightly different calculations\n",
-    "            #therefore, in such cases, setting it to 0 could be reasonable\n",
+    "            if(wrongRow['npg'] < 0):\n",
+    "                print(wrongRow['player_name']+\" npg\")\n",
+    "            wrongRow.at['assists'] = max(row['assists'] - corrRow['assists'], 0)\n",
     "            wrongRow.at['xG'] = max(row['xG'] - corrRow['xG'], 0)\n",
     "            wrongRow.at['xG90'] = wrongRow['xG'] / wrongRow['minutes_played'] * 90\n",
     "            wrongRow.at['npxG'] = max(row['npxG'] - corrRow['npxG'], 0)\n",
     "            wrongRow.at['npxG90'] = wrongRow['npxG'] / wrongRow['minutes_played'] * 90\n",
     "            wrongRow.at['xA'] = max(row['xA'] - corrRow['xA'], 0)\n",
     "            wrongRow.at['xA90'] = wrongRow['xA'] / wrongRow['minutes_played'] * 90\n",
-    "            wrongRow.at['yellow_cards'] = row['yellow_cards'] - corrRow['yellow_cards']\n",
-    "            #shots could result negative for the same reason as above\n",
+    "            wrongRow.at['yellow_cards'] = max(row['yellow_cards'] - corrRow['yellow_cards'], 0)\n",
+    "            wrongRow.at['red_cards'] = max(row['red_cards'] - corrRow['red_cards'], 0)\n",
     "            wrongRow.at['shots'] = max(row['shots'] - corrRow['shots'], 0)\n",
     "\n",
     "            #we lack of data for these columns, so we mark this lack for later\n",
@@ -571,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,26 +1042,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jurado\n",
-      "Raúl García\n",
-      "Players with value: 2607 -- no value: 47\n",
-      "CPU times: total: 1.7 s\n",
-      "Wall time: 4.21 s\n"
+      "Players with value: 2737 -- no value: 36\n",
+      "CPU times: total: 3.03 s\n",
+      "Wall time: 9.85 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "y=2016\n",
-    "shortSeas = \"1617\"\n",
+    "y=2019\n",
+    "shortSeas = \"1920\"\n",
     "stats = pd.read_csv('stats'+str(shortSeas)+'_IDs.csv', sep=',')\n",
     "val = pd.read_csv(path+\"/inDepthSoccerStats/player_valuations\"+shortSeas+\".csv\", sep=',', index_col='player_id')\n",
     "\n",
@@ -1079,8 +1093,6 @@
     "        no += 1\n",
     "        if(row['games'] >= 10):\n",
     "            print(row['player_name'])\n",
-    "    #val_eur = val.loc[tmId]['market_value_in_eur']\n",
-    "    #g.add((Memb, DCSSO['tmValue'], Literal(str(val_eur), datatype=XSD.int)))\n",
     "\n",
     "    #statistics\n",
     "    g.add((Memb, DCSSO['games'], Literal(row['games'], datatype=XSD.int)))\n",
@@ -1110,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1118,8 +1130,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 1.52 s\n",
-      "Wall time: 3.37 s\n"
+      "CPU times: total: 1.38 s\n",
+      "Wall time: 3.77 s\n"
      ]
     }
    ],
